kibana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: elastic-k8s-kb-http
      port:
        number: 5601
  tls:
    - hosts:
        - kibana.k8s.conatest.click
      secretName: ssl-certificate
  rules:
    - host: kibana.k8s.conatest.click
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: elastic-k8s-kb-http
              port:
                number: 5601
